[tool.poetry]
name = "unsupervised-ner"
version = "0.1.0"
description = ""
authors = ["Matthias Egli <matthias.egli@ti8m.ch>"]
readme = "README.md"
packages = [{include = "unsupervised_ner"}]

[tool.poetry.dependencies]
python = "^3.10"
gdown = "^4.5.1"
pytorch-pretrained-bert = "^0.6.2"
pytorch-transformers = "^1.2.0"
scikit-learn = "^1.1.2"
transformers = "^4.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
